@@ -22,6 +22,7 @@ Version CVS HEAD (?)
     minimum width for scales
   * bug fix: avoid stale information in the instrument properties
     window when a new file is loaded or the instrument is removed
+  * cross fade graph: draw curves of all layers in the same graph
 
 Version 0.2.0 (2009-07-31)
 
